17.may (ws)
      - slightly more flexible way to enter notes/rests in voice != 0
16.may (la)
      - Add support for notehead color in MusicXML export and import
      - Add shape notehead support in MusicXML export and import
14.may (ws)
      - change tuplet numbers to italic and increase size from 8pt to 10pt to distinguish
        them better from fingering numbers
      - fix #8698: unable to make invisible flag without making also stem invisible
      - fix #7460: Soundfont disabled when resetting preferences
      - more beam tweaking
13.may (ws)
      - fix #10659: no sound in part
      - fix #10660: continue last session & panel enabled
      - more flexible instrument names
12.may (ws)
      - better organ template in instruments.xml
      - add icon size to preferences
      - fix #10634: create barLineSpan and system brackets for parts
      - fix #10631: Dots out of place in Part
      - fix #10642: Playback position not held after changing score
11.may (ws)
      - fix #8998: Exporting MIDI causes crash
      - fix #10620: Copy&Paste of notes changes flats to sharps
9.may (ws)
      - text editor additions: indent & lists
5.may (ws)
      - modified musical symbols in FreeSerif font (adjust baseline so that
        tempo markings look better) and rename it to FreeSerifMscore so that
        qt loads this modified font and not the system font with same name.
      (la)
      - set notehead shape from plugin framework
4.may (ws)
      - implemented "delete profile"
      (la)
      - fix #9342 : repeat entry doesn't scroll display
3.may (ws)
      - raster for vertical frames
      - add x/y spin box to move position in edit mode
      - fix for slurs starting at staff n+1 and ending at staff n
2.may (ws)
      - ottava style additions similar to volta
      - ottava backward compatibility
      - fix backward compatibility for voltas
      - allow diagonal hairpins (enable in hairpin property menu)
28.apr (ws)
      - style additions for volta