@@ -359,10 +359,16 @@ void ScoreTab::initScoreView(int idx, double mag, int magIdx, double xoffset, do
       {
       ScoreView* v = view(idx);
       if (!v)  {
-            QSplitter* vs = new QSplitter;
             v = new ScoreView;
+            Score* sc = scoreList->value(idx);
+            if( sc != 0 )
+                  v->setScore(sc);
+            else {
+                  delete v;
+                  return;
+                  }
+            QSplitter* vs = new QSplitter;
             vs->addWidget(v);
-            v->setScore(scoreList->value(idx));
             stack->addWidget(vs);
             }
       v->setMag(magIdx, mag);
