@@ -1,5 +1,7 @@
 17.may (ws)
       - slightly more flexible way to enter notes/rests in voice != 0
+       (la)
+      - fix #1722: Continue last session tries to open discarded score
 16.may (la)
       - Add support for notehead color in MusicXML export and import
       - Add shape notehead support in MusicXML export and import
